WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223936
Fix for accessibility/textarea-insertion-point-line-number.html.
https://bugs.webkit.org/show_bug.cgi?id=223936
Summary
Fix for accessibility/textarea-insertion-point-line-number.html.
Andres Gonzalez
Reported
2021-03-30 09:45:23 PDT
Fix for accessibility/textarea-insertion-point-line-number.html.
Attachments
Patch
(19.74 KB, patch)
2021-03-30 10:05 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-30 09:45:40 PDT
<
rdar://problem/76007361
>
Andres Gonzalez
Comment 2
2021-03-30 10:05:21 PDT
Created
attachment 424653
[details]
Patch
EWS
Comment 3
2021-03-30 11:47:22 PDT
Committed
r275217
: <
https://commits.webkit.org/r275217
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424653
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug