Source/WebCore/accessibility/AccessibilityObjectInterface.h
@@ -1174,9 +1174,7 @@ public:
 
     virtual TextIteratorBehavior textIteratorBehaviorForTextRange() const = 0;
     virtual PlainTextRange selectedTextRange() const = 0;
-    // FIXME: why do we need the following two methods if we already have selectedTextRange?
-    virtual unsigned selectionStart() const = 0;
-    virtual unsigned selectionEnd() const = 0;
+    virtual int insertionPointLineNumber() const = 0;
 
     virtual URL url() const = 0;
     virtual VisibleSelection selection() const = 0;
